--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import "config";
 @import "menu";
+@import "mobile";
 * {
     box-sizing: border-box;
 }
@@ -7,7 +8,7 @@
 body {
     @include background;
     background: $primary-color;
-    color: set-text-color($primary-color);
+    color: #fff;
     height: 100%;
     margin: 0;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
